Partial 'fix' for Bug 690993. When encoding a bitmap into a clist, we copy it into a block with potentially larger padding requirements. These extra padding bytes were left undefined, causing subsequent attempts to compress the bitmap to cause valgrind to give warnings.

The fix is simply to introduce and use a new function that copies a bitmap
and zeros the padding. This should eliminate the warnings, produce better
compression, and (more importantly) mean that every run uses the same amount
of memory, hence eliminating potential odd effects where clists may be of
different lengths on different runs.

This still leaves bug 690993 open.

No expected differences.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11723 a1074d23-0009-0410-80fe-cf8c14f379e6